# VisualTimer

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  release.yml
resources/: icons.qrc  visualtimer.desktop.in
src/: iconhelper.h  main.cpp  mainwindow.cpp  mainwindow.h  timer.cpp  timer.h  timerdial.cpp  timerdial.h
ui/: mainwindow.ui
